Moving the logo and fixing overflowing nav in FF

--- a/less/_logo.less
+++ b/less/_logo.less
@@ -14,9 +14,9 @@
         
         // Visual
         -webkit-transform: translate(-52%, -7%);
-           -moz-transform: translate(-50%, 50%);
+           -moz-transform: translate(-50%, 30%);
             -ms-transform: translate(-50%, 50%);
              -o-transform: translate(-50%, 50%);
-                transform: translate(-50%, 50%);
+                transform: translate(-50%, 40%);
     }
 }
