--- a/less/_toolbar.less
+++ b/less/_toolbar.less
@@ -20,6 +20,9 @@
         // Positioning
         .pos(relative);
 
+        // Box-model
+        overflow: hidden;
+
         // Visual
         @color: #fff;
         @top: fadeout(@color, 70%);
